Minimal changes done!